--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,7 @@ body {
 }
 
 .regular-link a:hover {
-  background-color: #2d8659;
+  background-color: #333333;
   padding: 10px;
   border-radius: 5px;
   -o-transition:.5s;
@@ -146,6 +146,39 @@ body {
   /*color: white;*/
 }
 
-/*#C {
-  padding: 0;
-}*/
+/*second stuff*/
+
+#second {
+  padding: 50px 250px 0px 250px;
+  text-align: center;
+  height: 400px;
+}
+
+#second h1 {
+  font-size: 300%;
+}
+
+#second p {
+  font-size: 125%;
+  color: #333333;
+  line-height: 30px;
+}
+
+/*third stuff*/
+
+#third {
+  padding: 50px 250px 0px 250px;
+  text-align: center;
+  height: 400px;
+  background: #f2f2f2;
+}
+
+#third h1 {
+  font-size: 300%;
+}
+
+#third p {
+  font-size: 125%;
+  color: #333333;
+  line-height: 30px;
+}
